# notice-bot

./: .gitignore  .replit  README.md  bot_runner.py  config.py  env.example  install_chromedriver.py  local_notes_reader.py  notes_monitor.py  package.json  pyproject.toml  render.yaml  requirements.txt  selenium_notes_monitor.py  telegram_bot.py
